# Meteoros

./: .gitignore  CMakeLists.txt  INSTRUCTION.md  LICENSE  README.md  TXAA.md  dithering.md  temp.cpp
src/: CMakeLists.txt
src/CloudScapes/: BufferUtils.cpp  BufferUtils.h  Commands.cpp  Commands.h  FormatUtils.h  Image.cpp  Image.h  ImageLoadingUtility.cpp  ImageLoadingUtility.h  Model.cpp  Model.h  Renderer.cpp  Renderer.h  Scene.cpp  Scene.h  ShaderModule.cpp  ShaderModule.h  Sky.cpp  Sky.h  SwapChain.cpp  SwapChain.h  Texture2D.cpp  Texture2D.h  Texture3D.cpp  Texture3D.h  VMA_Utility.cpp  VMA_Utility.h  Vertex.h  VulkanDevice.cpp  VulkanDevice.h  VulkanInitializers.h  VulkanInstance.cpp  VulkanInstance.h  camera.cpp  camera.h  forward.h  main.cpp  vulkan_buffer.cpp  vulkan_buffer.h  vulkan_device.cpp  (+11 more)
src/CloudScapes/shaders/: cloudCompute.comp  cloudRayMarch.comp  clouds.frag  clouds.vert  compile.bat  geometryPlain.frag  geometryPlain.vert  postProcess_AntiAliasing.vert  postProcess_FinalPass.frag  postProcess_FinalPass.vert  postProcess_GenericVertShader.vert  postProcess_GodRays.frag  postProcess_GodRays.vert  postProcess_TXAA.frag  postProcess_TXAA.vert  postProcess_ToneMap.frag  reprojection.comp  reprojectionCompute.comp  shader.comp  shader.frag  shader.vert
src/CloudScapes/textures/CloudTextures/: GoodHighFrequency.hipnc  GoodLowFrequency.hda
src/CloudScapes/textures/CloudTextures/HighFrequency/type1/: highFrequency3DTextureArray.001.tga  highFrequency3DTextureArray.002.tga  highFrequency3DTextureArray.003.tga  highFrequency3DTextureArray.004.tga  highFrequency3DTextureArray.005.tga  highFrequency3DTextureArray.006.tga  highFrequency3DTextureArray.007.tga  highFrequency3DTextureArray.008.tga  highFrequency3DTextureArray.009.tga  highFrequency3DTextureArray.010.tga  highFrequency3DTextureArray.011.tga  highFrequency3DTextureArray.012.tga  highFrequency3DTextureArray.013.tga  highFrequency3DTextureArray.014.tga  highFrequency3DTextureArray.015.tga  highFrequency3DTextureArray.016.tga  highFrequency3DTextureArray.017.tga  highFrequency3DTextureArray.018.tga  highFrequency3DTextureArray.019.tga  highFrequency3DTextureArray.020.tga  highFrequency3DTextureArray.021.tga  highFrequency3DTextureArray.022.tga  highFrequency3DTextureArray.023.tga  highFrequency3DTextureArray.024.tga  highFrequency3DTextureArray.025.tga  highFrequency3DTextureArray.026.tga  highFrequency3DTextureArray.027.tga  highFrequency3DTextureArray.028.tga  highFrequency3DTextureArray.029.tga  highFrequency3DTextureArray.030.tga  highFrequency3DTextureArray.031.tga  highFrequency3DTextureArray.032.tga
src/CloudScapes/textures/CloudTextures/HighFrequency/type2/: highFrequency3DTextureArray.001.tga  highFrequency3DTextureArray.002.tga  highFrequency3DTextureArray.003.tga  highFrequency3DTextureArray.004.tga  highFrequency3DTextureArray.005.tga  highFrequency3DTextureArray.006.tga  highFrequency3DTextureArray.007.tga  highFrequency3DTextureArray.008.tga  highFrequency3DTextureArray.009.tga  highFrequency3DTextureArray.010.tga  highFrequency3DTextureArray.011.tga  highFrequency3DTextureArray.012.tga  highFrequency3DTextureArray.013.tga  highFrequency3DTextureArray.014.tga  highFrequency3DTextureArray.015.tga  highFrequency3DTextureArray.016.tga  highFrequency3DTextureArray.017.tga  highFrequency3DTextureArray.018.tga  highFrequency3DTextureArray.019.tga  highFrequency3DTextureArray.020.tga  highFrequency3DTextureArray.021.tga  highFrequency3DTextureArray.022.tga  highFrequency3DTextureArray.023.tga  highFrequency3DTextureArray.024.tga  highFrequency3DTextureArray.025.tga  highFrequency3DTextureArray.026.tga  highFrequency3DTextureArray.027.tga  highFrequency3DTextureArray.028.tga  highFrequency3DTextureArray.029.tga  highFrequency3DTextureArray.030.tga  (+98 more)
(+481 files in other folders)
